# CP-Practice

./: .gitignore  TodoList
AA/AA-Public/: pB.cpp  pI.cpp  pJ.cpp  pM.cpp
AA/lvl-2/: 實作 lower_bound.cpp  找到一個 1-Adaptive.cpp  找到一個 1-Non-Adaptive.cpp  最右邊的 0.cpp  最左邊的 1.cpp
AA/lvl2-pre/: pA.cpp  pB.cpp  pC.cpp  pD.cpp  pE.cpp  pF.cpp  pG.cpp  (+1 more)
AI-Practice/: MATH.cpp
CSES/: Coin Piles.cpp  Collecting Numbers II.cpp  DiceCombinations.cpp  Distance Queries.cpp  Dynamic Range Sum Queries-SegmentTree.cpp  Increasing Subsequence.cpp  Minimal Grid Path.cpp  Playlist.cpp  Range Update Queries.cpp  Range Updates and Sums.cpp  Removal Game.cpp  Restaurant Customers.cpp  Room Allocation.cpp  Static Range Minimum Queries.cpp  Tree Matching.cpp  main.cpp
Other/: temp.cpp
Practice/: BIT.cpp  BoundedKnapsack.cpp  DFS_order.cpp  DSU.cpp  Dijkstra.cpp  DynamicST.cpp  HLD.cpp  LIS.cpp  RollingHash.cpp  SegmentTree.cpp  SparseTable.cpp  WeightedDSU.cpp
Project/DateScheduling/: CMakeLists.txt  CalendarWindow.cpp  CalendarWindow.h  DayEditorDialog.cpp  DayEditorDialog.h  EmployeeManager.cpp  EmployeeManager.h  ScheduleDelegate.cpp  ScheduleDelegate.h  ShiftData.cpp  ShiftData.h  main.cpp
TIOJ/: 1807.cpp
TIOJ-ck/: 1617.cpp  1911.cpp
TOJ/: 275.cpp  575.cpp
Template/: BIT.cpp  Dijkstra.cpp  Kruskal.cpp  SegmentTree.cpp
ZJ/: a017.cpp  a038.cpp  a248.cpp  a541.cpp  a915.cpp  b923.cpp  c123.cpp  d242.cpp  d424.cpp  d645.cpp  d652.cpp  e155.cpp  f312.cpp  f313.cpp  f345.cpp  i399.cpp  o712.cpp  p909.cpp  p914.cpp  q837.cpp  q838.cpp  r489.cpp  r627.cpp  s140.cpp  s180-.cpp
(+974 files in other folders)
